--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-##################### Database Properties #############################
+############# Database Properties ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone
+spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
-
-#################### Mail Properties ######################
+############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=
 spring.mail.password=
 spring.mail.protocol=smtp
+############ JWT Properties #####################
+jwt.expiration.time=90000
+
